2008-08-20  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Comparer(), Check.List().
	* IEnumerable.cs: Add SequenceCompare(), based on an idea from 
	  Cory Nelson <phrosty@gmail.com>.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Curry.cs: *Actually* Add the file.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Lambda.cs: Oops; *actually* add Lambda.cs.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Lambda.cs: Remove RecFunc(), as mklamba now generates it.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Lambda.cs: Rename to Lambdas.cs, and add a new Lambda.cs which
	  contains a new hand-written Lambda helper, RecFunc().

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Curry.cs: Added; currying extension methods for Action, Func.
	* Lambda.cs, Tuples.cs: Flush (minor changes due to rewrites of 
	  mklambda and mktuple

2008-08-18  Jonathan Pryor  <jpryor@novell.com>

	* String.cs: Rename Matches() to .MatchValues(), and add a .Matches()
	  extension method which returns System.Text.RegularExpressions.Match
	  instances.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Lambda.cs: Added; helpers to create "standard" delegate types.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* String.cs: Rename NamedCaptures to CaptureNamedGroups.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Int16.cs, Int64.cs, UInt16.cs, UInt32.cs, UInt64.cs: Added; extension
	  methods .IsEven() and .IsOdd() for short, ushort, uint, long, ulong.
	  Patch courtesy of Kim Johansson.
	* Int32.cs: Add .IsEven() and .IsOdd().

2008-08-14  Jonathan Pryor  <jpryor@novell.com>

	* Tuple.cs, Tuples.cs: Remove some Gendarme warnings.

2008-08-14  Bojan Rajkovic  <bojanr@brandeis.edu>

	* String.cs: Added convenience regex methods: Matches,
	  Captures and NamedCaptures.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Change Stream.Read(out string, int, Encoding) to
	  Stream.Read(int, Encoding, out string) to conform to FxDG.
