@@ -1,3 +1,7 @@
+2008-08-22  Jonathan Pryor  <jpryor@novell.com>
+
+	* IEnumerableTest.cs: Add tests for .Shuffle().
+
 2008-08-20  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerableTest.cs: Add tests for .ToTuple(), .SequenceCompare().
